--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=""
+MONGODB_URI="mongodb+srv://malang:freewolf@mysterymessage.qgumhwg.mongodb.net/?retryWrites=true&w=majority&appName=mysterymessage"
 RESEND_API_KEY="re_N5nKqptN_DGQXdfUQ7wJ1nz95wM8pmMii"
 NEXTAUTH_SECRET=ewfwvwebeberb
