added .env in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+.env
 
 # testing
 /coverage
@@ -15,10 +16,12 @@
 
 # production
 /build
+.env
 
 # misc
 .DS_Store
 *.pem
+.env
 
 # debug
 npm-debug.log*
